fix overflow-y for text areas

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@
   left: 20px;
   max-height: 400px;
   z-index: 9;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 #flywheel #instructions_text_block {
@@ -67,7 +67,7 @@
   top: 100px;
   right: 0;
   z-index: 9;
-  overflow-y: scroll;
+  overflow-y: auto;
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
   box-shadow: 0rem 0.4rem 0.5rem 0rem rgb(201, 201, 201);
@@ -81,7 +81,7 @@
 #flywheel #instructions_text_block > article {
   padding: 1rem 2rem 5px;
   max-height: 340px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 #flywheel #instructions_text_block > article p:first-child {
